# zaphod

./: CMakeLists.txt  LICENSE  README.md
include/: zaphod.h
include/zaphod/: grid_templates.h  key.h  product_templates.h  reader.h  table.h  table_defs.h  templates.h  utils.h
scripts/: make_code_tables.py
src/: grib2_grid_templates.cpp  grib2_grid_templates.h  grib2_key.cpp  grib2_key.h  grib2_product_templates.cpp  grib2_product_templates.h  grib2_reader.cpp  grib2_reader.h  grib2_table.cpp  grib2_table.h  grib2_table_defs.h  grib2_templates.h  grib2_utils.cpp  grib2_utils.h  reader.cpp
src/nanobind/: CMakeLists.txt  humma.cpp
src/zaphod/: grid_templates.cpp  key.cpp  product_templates.cpp  reader.cpp  table.cpp  table_defs.cpp  utils.cpp
tests/: CMakeLists.txt  test_grib_reader.cpp  test_projection.cpp  test_templates.cpp  utils.h
